--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  <div class="col-md-12 mb-12">
        <a name="Rates"><br><br>
        <h2 id="Rates">Rates</h2>
-        <p>If you are interested in recording in our studio, do not hesitate to contact us to email <a href="mailto:rapforlife96@gmail.com">rapforlife96@gmail.com</a>. 
+        <p>If you are interested in recording in our studio, do not hesitate to contact us to email rapforlife96@gmail.com. 
 Prices are calculated individually for each project. It depends on the choice, the occupation, cast of the instruments and players, the type of recording, the intensity and amount of studio works on the project etc. In case of long-term or repeated rental of the studio, charity projects and projects of young bands and students of music schools there is a possibility of discount.</p>
       </div><br>
 
@@ -116,7 +116,7 @@ Prices are calculated individually for each project. It depends on the choice, t
          <p>Check our gallery <a href="">here</a>.</p>
       </div><br>
 
-      <div class="col-md-6 mb-6 contact">
+      <div class="col-md-12 mb-12 contact">
        <a name="Contact"><br><br>
         <h2 id="Contact">Contact Us</h2>
         <div>
@@ -131,8 +131,9 @@ Prices are calculated individually for each project. It depends on the choice, t
           +359887820208
           <br>
           <abbr title="Email">Email:</abbr>
-          <a href="mailto:rapforlife96@gmail.com">rapforlife96@gmail.com</a>
+          <a href="mailto:#">rapforlife96@gmail.com</a>
         </address>
+        <div class="fb-page" data-href="https://www.facebook.com/imperiumsoundofficial/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
       </div>
       </div>
     </div>
@@ -143,7 +144,7 @@ Prices are calculated individually for each project. It depends on the choice, t
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Imperium Sound 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
   </footer>
