--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  <div class="col-md-12 mb-12">
        <a name="Rates"><br><br>
        <h2 id="Rates">Rates</h2>
-        <p>If you are interested in recording in our studio, do not hesitate to contact us to email rapforlife96@gmail.com. 
+        <p>If you are interested in recording in our studio, do not hesitate to contact us to email <a href="mailto:#">rapforlife96@gmail.com</a>. 
 Prices are calculated individually for each project. It depends on the choice, the occupation, cast of the instruments and players, the type of recording, the intensity and amount of studio works on the project etc. In case of long-term or repeated rental of the studio, charity projects and projects of young bands and students of music schools there is a possibility of discount.</p>
       </div><br>
 
