--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
 <body>
 <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="HDo78fNX"></script>
+
+<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">IMPERIUM SOUND</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +51,7 @@
             <a class="nav-link" href="#Rates">Rates</a>
           </li>
                       <li class="nav-item">
-            <a class="nav-link" href="#Gallery">Gallery</a>
+            <a class="nav-link" href="#Booking">Booking</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#Contact">Contact</a>
@@ -69,7 +72,6 @@
         </div>
       </div>
         <img src="C:\Users\ACER\Documents\ZTM_HTML\CSS\startbootstrap-business-frontpage-gh-pages\startbootstrap-business-frontpage-gh-pages\Imperium.png">
-
     </div>-->
     <img src="https://i.ibb.co/cgq17D8/Imperium.png" alt="Imperium" border="0" class="logo">
 
@@ -84,6 +86,7 @@
         <h2 id="About">About</h2>
         <p>Hello and welcome to Imperium Sound! We are a studio located in Sofia, the capital of Bulgaria. Here you will find the sound you are looking for and a very friendly environment. We are professionals who want to help you achieve the sound you want! So if you are looking for a place that can help you make your ideas a reality, you found it!</p>
         <!--<a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>-->
+
       </div><br>
 
       <div class="col-md-12 mb-12">
@@ -102,18 +105,16 @@
  <div class="col-md-12 mb-12">
        <a name="Rates"><br><br>
        <h2 id="Rates">Rates</h2>
-        <p>If you are interested in recording in our studio, do not hesitate to contact us to email <a href="mailto:#">rapforlife96@gmail.com</a>. 
+        <p>If you are interested in recording in our studio, do not hesitate to contact us to email <a href="mailto:#">Info@imperiumsound.com</a>. 
 Prices are calculated individually for each project. It depends on the choice, the occupation, cast of the instruments and players, the type of recording, the intensity and amount of studio works on the project etc. In case of long-term or repeated rental of the studio, charity projects and projects of young bands and students of music schools there is a possibility of discount.</p>
       </div><br>
 
       <div class="col-md-12 mb-12">
-        <a name="Gallery"><br><br>
-        <h2 id="Gallery">Gallery</h2>
-      <!--  <img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg" class="img-fluid" alt="Responsive image">
-        <img src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg" class="img-fluid" alt="Responsive image">
-        <img src="https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg" class="img-fluid" alt="Responsive image">
-         <img src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg" class="img-fluid" alt="Responsive image"> -->
-         <p>Check our gallery <a href="">here</a>.</p>
+        <a name="Booking"><br><br>
+        <h2 id="Booking">Booking</h2>
+  		
+        <iframe id="sagendaFrame" src="https://sagenda.net/Frontend/Calendar/5ee48ebed67ba538e8079f65" scrolling="no" height="2050" style="width:100%" frameborder="0" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe><script>window.addEventListener("message", receiveMessage, false);function receiveMessage(event){if(event.data==="month"){document.getElementById("sagendaFrame").height = "1100";}else{document.getElementById("sagendaFrame").height = "2050";}}</script>
+
       </div><br>
 
       <div class="col-md-12 mb-12 contact">
@@ -131,8 +132,9 @@ Prices are calculated individually for each project. It depends on the choice, t
           +359887820208
           <br>
           <abbr title="Email">Email:</abbr>
-          <a href="mailto:#">rapforlife96@gmail.com</a>
+          <a href="mailto:#">Info@imperiumsound.com</a>
           </address>
+          <strong>Facebook page: </strong><a href="https://www.facebook.com/imperiumsoundofficial/">Imperium Sound</a>
       </div>
       </div>
     </div>
@@ -143,7 +145,7 @@ Prices are calculated individually for each project. It depends on the choice, t
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Impreium & KP Web Design 2020</p>
     </div>
     <!-- /.container -->
   </footer>
